Update Post “2022-03-05-test”

--- a/content/posts/2022-03-05-test.md
+++ b/content/posts/2022-03-05-test.md
@@ -2,5 +2,7 @@
 title: Test
 date: 2022-03-05T00:35:44.837Z
 description: Testing
+categories:
+  - testing
 ---
 Pat to Sponge. Pat to Sponge. Testing, testing. Testing, testing, testing, testing... TESTING! TEST! TEST! DO YOU READ?!
