--- a/content/posts/2022-03-05-test.md
+++ b/content/posts/2022-03-05-test.md
@@ -6,3 +6,16 @@ categories:
   - testing
 ---
 Pat to Sponge. Pat to Sponge. Testing, testing. Testing, testing, testing, testing... TESTING! TEST! TEST! DO YOU READ?!
+
+{{< juxtapose
+  startingPosition="35%"
+  animate="false"
+
+  left="https://lmao.ws/2022-03-04_23-55-59-860_IpsusuQuestingPastel.jpg"
+  leftLabel="left side"
+  leftCredit="left credit"
+
+  right="https://lmao.ws/2022-03-04_23-56-11-686_IpsusuQuestingPastel.jpg"
+  rightLabel="right side"
+  rightCredit="right credit"
+>}}
