make main content wide

--- a/content/posts/2022-03-05-test.md
+++ b/content/posts/2022-03-05-test.md
@@ -4,7 +4,10 @@ date: 2022-03-05T00:35:44.837Z
 description: Testing
 categories:
   - testing
+showTableOfContents: true
 ---
+
+## hello
 Pat to Sponge. Pat to Sponge. Testing, testing. Testing, testing, testing, testing... TESTING! TEST! TEST! DO YOU READ?!
 
 {{< juxtapose
